# kutils

./: CMakeLists.txt  README.md  consts.h  error.c  error.h  error_tests.c  kutils.c  kutils.h  kutils_internal.h  stream.c  stream.h  tests.c
